# Hiai

./: README.md
hiaifoundationkit-samplecode-clientdemo-cpp/entry/src(denoise)/main/cpp/denoise/: CMakeLists.txt  DenoiseManager.cpp  DenoiseManager.h
hiaifoundationkit-samplecode-clientdemo-cpp/entry/src(denoise)/main/cpp/types/libentry/: index.d.ts
hiaifoundationkit-samplecode-clientdemo-cpp/entry/src(denoise)/main/ets/pages/: Index.ets
